# temporal-attn-survey

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README_en.md  pyproject.toml
.claude/agents/: ml-coder.md  ml-reviewer.md
.claude/skills/: ml-feature.md
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
assets/: README.md
configs/: README.md  baseline_prompts.yaml
data/: .gitignore  README.md  baseline.dvc  results.dvc
notebooks/: 01_baseline_generation.ipynb  02_attention_extraction.ipynb  README.md
reports/: phase1_profiles.md
scripts/: README.md
src/: README.md  hooks.py
tests/: README.md  simple_test.py
