[tool.poetry]
name = "research-template"
version = "1.0.0"
description = "Research project template"
readme = "README.md"
authors = ["Ivan Betev <betev.vanya@gmail.com>"]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
torchvision = "^0.16.0"
omegaconf = "^2.3.0"
black = "^24.1.1"
mdformat = "^0.7.17"
yamlfix = "^1.16.0"
mypy = "1.8.0"
pyclean = "^2.7.6"
hydra-core = "^1.3.2"
clearml = "^1.16.4"
pytest = "^8.3.0"
ruff = "^0.6.9"
dvc = { version = "^3.54.0", extras = ["s3"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
implicit_reexport = true
exclude = '(^\.venv)|(notebooks)'

[[tool.mypy.overrides]]
module = "clearml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
lint.select = [
    "W",
    "F",
    "E",
    "I", # isort
]

lint.preview = true

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    ".tox"
]

lint.ignore = [
    "E203", # Whitespace before ':' (in conflict with Black)
]

[tool.yamlfix]
allow_duplicate_keys = true
comments_min_spaces_from_content = 2
comments_require_starting_space = true
whitelines = 0
comments_whitelines = 1
section_whitelines = 1
explicit_start = false
sequence_style = "block_style"
line_length = 120
none_representation = "null"
quote_basic_values = false
quote_keys_and_basic_values = false
quote_representation = "'"
preserve_quotes = true

[tool.pytest.ini_options]
markers = [
    "fast: quick tests that run fast",
    "slow: slow tests that take more time"]