[project]
name = "temporal-attn-survey"
version = "0.1.0"
description = "Investigation of temporal attention heads in CogVideoX via visualization and targeted ablation."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [{ name = "Ivan Betev", email = "[Email3]" }]
dependencies = [
    "torch>=2.1.0,<3",
    "torchvision>=0.16.0,<1",
    "numpy<2",  # torch 2.1 was built against numpy 1.x; ABI clashes with numpy 2.x
    "diffusers>=0.31.0,<1",
    "transformers>=4.44.0,<5",
    "accelerate>=1.0.0,<2",
    "sentencepiece>=0.2.0,<1",
    "imageio>=2.34.0,<3",
    "imageio-ffmpeg>=0.5.1,<1",
    "opencv-python>=4.10.0,<5",
    "open-clip-torch>=2.26.0,<3",
    "scikit-learn>=1.5.0,<2",
    "matplotlib>=3.9.0,<4",
    "seaborn>=0.13.0,<1",
    "jupyterlab>=4.2.0,<5",
    "ipykernel>=6.29.0,<7",
    "omegaconf>=2.3.0,<3",
    "hydra-core>=1.3.2,<2",
    "clearml>=1.16.4,<2",
    "dvc[s3]>=3.54.0,<4",
    "black>=24.1.1,<25",
    "mdformat>=0.7.17,<1",
    "yamlfix>=1.16.0,<2",
    "mypy==1.8.0",
    "pyclean>=2.7.6,<3",
    "pytest>=8.3.0,<9",
    "ruff>=0.6.9,<1",
]

[tool.uv]
package = false


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
implicit_reexport = true
exclude = '(^\.venv)|(notebooks)'

[[tool.mypy.overrides]]
module = "clearml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "diffusers.*",
    "transformers.*",
    "accelerate.*",
    "sentencepiece.*",
    "cv2.*",
    "sklearn.*",
    "open_clip.*",
    "imageio.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
lint.select = [
    "W",
    "F",
    "E",
    "I", # isort
]

lint.preview = true

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    ".tox"
]

lint.ignore = [
    "E203", # Whitespace before ':' (in conflict with Black)
]

[tool.yamlfix]
allow_duplicate_keys = true
comments_min_spaces_from_content = 2
comments_require_starting_space = true
whitelines = 0
comments_whitelines = 1
section_whitelines = 1
explicit_start = false
sequence_style = "block_style"
line_length = 120
none_representation = "null"
quote_basic_values = false
quote_keys_and_basic_values = false
quote_representation = "'"
preserve_quotes = true

[tool.pytest.ini_options]
markers = [
    "fast: quick tests that run fast",
    "slow: slow tests that take more time"]